alignment fix

--- a/style.css
+++ b/style.css
@@ -15,15 +15,11 @@
 }
 
 .flex-2-col {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
     overflow-x: scroll;
 }
 .flex-2-col > div {
-    width:50%;
     margin:auto;
-   
 }
 .form-control {
     display: flex;
@@ -33,6 +29,7 @@
 }
 .mb-5 { margin-bottom:15px; }
 .form-control input {
+   
     height:40px;
     width:35%;
 }
@@ -40,4 +37,26 @@
     color:rgba(241, 196, 15,1.0);
     font-size: 32px;
     width:15%;
+}
+.btn {
+    background:rgba(241, 196, 15,85.0);
+    color: rgba(44, 62, 80,1.0);
+    padding:12px 8px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin:20px;
+    width:80%   ;
+}
+.compare {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hide {
+    display:none;
+}
+.center {
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
 }
